10 March 2015: Wouter
	- Fix use after free after zonefile syntax error followed by ttl
	  or origin directive, reported by John Van de Meulebrouck Brendgard.

9 March 2015: Wouter
	- Fix origin directive from unused old value and subdomain parser
	  failure, reported by John Van de Meulebrouck Brendgard.

2 March 2015: Wouter
	- Fix b64pton out of bounds error on invalid zonefile input.

20 February 2015: Wouter
	- Fix segfault on double origin in zone reader (thanks John Van de
	  Meulebrouck Brendgard).

19 February 2015: Wouter
	- Remove dead code domain_table_iterate.
	- Fix segfault in zone reader on invalid input.

5 February 2015: Wouter
	- Fix #642: Change 'zone read with no errors' to '.. with success'.
	  Patch from Benedikt Heine.

3 February 2015: Wouter
	- Tag 4.1.1 release
	- Trunk is 4.1.2 in development.
	- Remove some duplicate header includes (from Brad Smith).
	- Fix tcp waiting list for zone transfers where the bind and connect
	  calls fail.

29 January 2015: Wouter
	- Fix zonesdir chroot error message.

28 January 2015: Wouter
	- correct some hyphen-used-as-minus-sign (from Andreas Schulze) in
	  man pages.

27 January 2015: Wouter
	- Tag 4.1.1rc1

21 January 2015: Wouter
	- Synthesize CNAMEs with same TTL as DNAME.

12 January 2015: Wouter
	- Fix casts for ctype functions (from Todd Miller).
	- nsd-checkconf -f prints out full name of pidfile (with dir).

9 January 2015: Wouter
	- Fix bug#637: fix that nsd.db grows limitlessly, an off by one
	  on one megabyte free chunks, created during AXFRs of large zones,
	  that caused the one megabyte chunk to be leaked.
	- Fix udb-inspect for one megabyte chunks, counts and statistics.

6 January 2015: Wouter
	- Fix spinning NSD with lots of failing transfers, due to pointer
	  comparison using void pointer subtraction (from Otto Moerbeek).

5 January 2015: Wouter
	- Patch nsd_munin_ from Philip Paeps to use type ABSOLUTE.

4 Nov 2014: Wouter
	- Document zonestat config, and nsd-checkconf access.
